# veils

./: .gitignore  AGENTS.md  COMPARISON_SUMMARY.md  Cargo.toml  Dockerfile.crate-test  FINAL_STATUS_REPORT.md  LICENSE  README.md  RUST_DEBUGGING_PLAN.md  VISUAL_PROOF_REPORT.md  compare_implementations.py  complete_pipeline_test.py  create_comparison_plots.py  create_pipeline_plots.py  create_visual_proof.py  debug_istft.py  debug_rust_istft.py  debug_scipy_internals.py  debug_stft.py  debug_stft_detailed.py  docker-compose.yml  final_comparison.py  final_verification.py  generate_pipeline_comparison.py  generate_separated_plots.py  implementation_summary.md  minimal_debug.py  plot_summary.py  python_vs_rust_comparison.py  run_code_quality_checks.sh  run_comparison.sh  run_comprehensive_tests.sh  run_crate_tests.sh  run_docker_comparison.sh  run_final_comparison.sh  run_full_comparison.py  run_full_comparison_docker.py  standalone_stft.py  test_crate.sh  test_fft_libs.py  (+3 more)
.github/workflows/: ci.yml
docker/: code_quality.Dockerfile  py.Dockerfile  python_rust_comparison.Dockerfile  rust.Dockerfile  unified_test.Dockerfile
examples/: basic_usage.rs
python/: standalone_stft.py
scripts/: run_code_quality_checks.sh  run_comprehensive_tests.sh
src/: lib.rs
tests/: integration_tests.rs
