[package]
name = "veils"
version = "0.1.2"
edition = "2021"
authors = ["Georgy Charkseliani <giordano2407@gmail.com>"]
description = "A high-performance Short-Time Fourier Transform (STFT) library with scipy.signal.ShortTimeFFT compatibility"
license = "MIT"
repository = "https://github.com/ultrasaw/veils"
homepage = "https://github.com/ultrasaw/veils"
# documentation = "https://docs.rs/veils"
keywords = ["fft", "stft", "signal-processing", "audio", "scipy"]
categories = ["algorithms", "multimedia::audio", "science"]
readme = "README.md"
exclude = [
    "comparison_results/*",
    "docker/*",
    "scripts/*",
    "python/*",
    "venv/*",
    "target/*",
    "src/bin/*",
    "final_comparison_results.json"
]

[dependencies]
rustfft = "6.4"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
